[gd_scene load_steps=3 format=3 uid="uid://shop_ui_001"]

[ext_resource type="Script" path="res://scripts/ui/shop.gd" id="1_shop"]
[ext_resource type="Theme" uid="uid://game_theme_001" path="res://resources/themes/game_theme.tres" id="2_theme"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_shop")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -40.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "TRADING POST"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "$0"
horizontal_alignment = 2

[node name="TabContainer" type="TabContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sell" type="Control" parent="Panel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox/TabContainer/Sell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0

[node name="ItemsGrid" type="GridContainer" parent="Panel/VBox/TabContainer/Sell/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="TotalSection" type="HBoxContainer" parent="Panel/VBox/TabContainer/Sell"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="TotalLabel" type="Label" parent="Panel/VBox/TabContainer/Sell/TotalSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Total: $0"

[node name="SellAllButton" type="Button" parent="Panel/VBox/TabContainer/Sell/TotalSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SELL ALL"

[node name="Upgrades" type="Control" parent="Panel/VBox/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox/TabContainer/Upgrades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpgradesVBox" type="VBoxContainer" parent="Panel/VBox/TabContainer/Upgrades/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CLOSE"
